--- a/HiveMind.Server/Dockerfile
+++ b/HiveMind.Server/Dockerfile
@@ -1,14 +1,14 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:10.0.102 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 
 
 # This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:10.0.102 AS with-node
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS with-node
 RUN apt-get update
 RUN apt-get install curl
 RUN curl -sL https://deb.nodesource.com/setup_20.x | bash
@@ -23,6 +23,7 @@ COPY ["hivemind.client/hivemind.client.esproj", "hivemind.client/"]
 RUN dotnet restore "./HiveMind.Server/HiveMind.Server.csproj"
 COPY . .
 WORKDIR "/src/HiveMind.Server"
+Run dotnet dev-certs https --trust
 RUN dotnet build "./HiveMind.Server.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
