Got ffmpeg working with docker

--- a/HiveMind.Server/Properties/launchSettings.json
+++ b/HiveMind.Server/Properties/launchSettings.json
@@ -16,7 +16,8 @@
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
       "publishAllPorts": true,
-      "useSSL": false
+      "useSSL": false,
+      "containerRunArguments": "-v f:\\\\Commercials\\Test:/home/app/test"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
