--- a/HiveMind.Server/Dockerfile
+++ b/HiveMind.Server/Dockerfile
@@ -2,20 +2,24 @@
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
-USER $APP_UID
+
+USER root
 WORKDIR /app
 EXPOSE 8080
 
+# Copy ffmpeg into runtime so Debug sees it
+COPY --from=mwader/static-ffmpeg:6.1 /ffmpeg /usr/local/bin/ffmpeg
+COPY --from=mwader/static-ffmpeg:6.1 /ffprobe /usr/local/bin/ffprobe
+
+USER $APP_UID
 
 # This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:10.0 AS with-node
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 RUN apt-get update
 RUN apt-get install curl
 RUN curl -sL https://deb.nodesource.com/setup_20.x | bash
 RUN apt-get -y install nodejs
 
-
-FROM with-node AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["HiveMind.Server/HiveMind.Server.csproj", "HiveMind.Server/"]
